# 202412-kubecon-india-presentation

./: .devfile.yaml  .gitignore  README.md
artifacts/: deployment.yaml
database-backup-using-kubectl/: Containerfile  Makefile  backup.sh  cleanup-cronjob.yml  cleanup.sh  postgres-backup.yml
kubernetes-client-examples/golang/: create_deployment_test.go  go.mod  list_all_pods_test.go  load_from_yaml_test.go  watch_pods_test.go
kubernetes-client-examples/java/: pom.xml
kubernetes-client-examples/java/src/main/java/io/fabric8/: LoadAndCreateDeployment.java  PodListTest.java  PodWatchTest.java  SimpleDeploymentCreate.java
kubernetes-client-examples/java/src/main/java/io/official/: LoadAndCreateDeployment.java  PodListTest.java  PodWatchTest.java  SimpleDeploymentCreate.java
kubernetes-client-examples/java/src/main/resources/: deployment.yaml
kubernetes-client-examples/javascript/: create_deployment.js  kubernetes-watch-namespace.js  list_pods.js  load_from_yaml.js  package-lock.json
kubernetes-client-examples/kubectl-bash/: create_deployment.sh  kubernetes-watch-namespace.sh  load_from_yaml.sh
kubernetes-client-examples/python/: Makefile  requirements.txt
kubernetes-client-examples/python/client-samples/: create_deployment.py  kubernetes-watch-namespace.py  list_all_pods.py  load_from_yaml.py
kubernetes-client-examples/rust/: Cargo.toml
sample-operator/: README.md  pom.xml
