[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
kube = { version = "0.96.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.23.0", features = ["latest"] }
tokio = { version = "1", features = ["full"] }  # Asynchronous runtime
serde = { version = "1.0", features = ["derive"] }  # For serializing/deserializing
serde_json = "1.0"  # For working with JSON
serde_yaml = "0.8" # For working with YAML
futures = { version = "0.3.17", default-features = false }

[dev-dependencies]
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[workspace.dependencies]
anyhow = "1.0.71"
tracing = "0.1.36"
tracing-subscriber = "0.3.17"